Revelation changelog

---------------[ xxxx-xx-xx : 0.3.3 ]---------------

2004-08-25  Erik Grinaker <erikg@codepoet.no>

	* created entry subclasses for various types instead of
	using the entry dict

2004-08-24  Erik Grinaker <erikg@codepoet.no>

	* changed some launcher substitution variables

	* added optional variables and optional substring expansions
	to the launcher expansion syntax

	* changed the default launchers

	* added tooltips to launcher preferences

2004-08-23  Erik Grinaker <erikg@codepoet.no>

	* changed the accelerators for adding, editing and removing
	entries to Control-Insert, Control-Return and Control-Delete

	* added key handler to the tree view to allow Insert, Return
	and Delete to be used when navigating the tree

	* added preference inputs for launcher commands

	* multiple entries can now be launched simultaneously

2004-08-12  Erik Grinaker <erikg@codepoet.no>

	* added a password generator dialog

2004-08-11  Erik Grinaker <erikg@codepoet.no>

	* minor tweaks to launcher code

	* added a search toolbar

2004-08-10  Erik Grinaker <erikg@codepoet.no>

	* added an exception handler which displays a dialog with
	a traceback whenever an unhandled exception occurs

	* fixed a bug in the edit entry dialog which caused entry
	description to not be set

	* added config_get() and config_connect() functions

	* added initial launcher support

	* added exception handler for KeyboardInterrupt (Control-C)


---------------[ 2004-08-09 : 0.3.2 ]---------------

2004-08-09  Erik Grinaker <erikg@codepoet.no>

	* don't try to load the removed druid module

	* bumped version number to 0.3.2


---------------[ 2004-08-08 : 0.3.1 ]---------------

2004-08-08  Erik Grinaker <erikg@codepoet.no>

	* merged the ui module into the widget module

	* fixed some bugs introduced during development

	* the window position is stored on quit

2004-08-07  Erik Grinaker <erikg@codepoet.no>

	* minor code cleanups

2004-08-06  Erik Grinaker <erikg@codepoet.no>
